# stk

./: .gitignore  ADSR.cpp  ADSR.h  AgogoBel.cpp  AgogoBel.h  AllPass1.cpp  AllPass1.h  BeeThree.cpp  BiQuad.cpp  BowTabl.cpp  BowTabl.h  Bowed.cpp  Bowed.h  Brass.cpp  Brass.h  CMakeLists.txt  Clarinet.cpp  Clarinet.h  DCBlock.cpp  DCBlock.h  DLineA.cpp  DLineA.h  DLineL.cpp  DLineL.h  DLineN.cpp  DLineN.h  DrumSynt.cpp  DrumSynt.h  Envelope.cpp  Envelope.h  FM4Alg3.cpp  FM4Alg3.h  FM4Alg4.cpp  FM4Alg4.h  FM4Alg5.cpp  FM4Alg5.h  FM4Alg6.cpp  FM4Alg6.h  FM4Alg8.cpp  FM4Alg8.h  (+154 more)
STK/: AgogoBel.cpp  AgogoBel.h  BiQuad.cpp  BiQuad.h  BowTabl.cpp  BowTabl.h  Bowed.cpp  BowedBar.cpp  BowedBar.h  Brass.cpp  Clarinet.cpp  Clarinet.h  DCBlock.cpp  DCBlock.h  DLineA.cpp  DLineA.h  DLineL.cpp  DLineL.h  DLineN.cpp  DLineN.h  DrumSynt.cpp  DrumSynt.h  Envelope.cpp  FM4Alg4.h  FM4Alg5.h  FM4Op.cpp  FM4Op.h  FMVoices.cpp  Filter.h  Flute.cpp  Flute.h  FormSwep.h  JCRev.cpp  JCRev.h  JetTabl.cpp  JetTabl.h  LipFilt.cpp  LipFilt.h  MD2SKINI.cpp  MIDIIO.cpp  (+75 more)
STK for iOS/: README.md
STK for iOS/STK for iOS.xcodeproj/: project.pbxproj
STK for iOS/STK.xcodeproj/: project.pbxproj
TCLSpecs/: .swp  GUIDrums  GUIPhysical  GUIPlukStruk  GUIShakers  GUIVoice  MIDIPhysical  MIDIPlukStruk  MIDIVoice  TCLDrums.tcl  TCLPhys.tcl  TCLShakers.tcl  TCLStruk.tcl  TCLVoice.tcl
cmake/: FindCoreAudio.cmake
doc/: Hierarchy.txt  README-Linux.txt  README-MacOSX.txt  README-NeXT.txt  README-SGI.txt  README-Win.txt  README.txt  ReleaseNotes.txt  SKINI.txt  hierarchy.txt
doc/doxygen/: Doxyfile  classes.txt  compile.txt  control.txt  crealtime.txt  download.txt  faq.txt  filtering.txt  footer.html  fundamentals.txt  header.html  header.tex  hello.txt  index.txt  information.txt  instruments.txt  links.txt  maillist.txt  multichannel.txt  polyvoices.txt  realtime.txt  skini.txt  system.txt  tutorial.txt  usage.txt
doc/html/: ADSR_8h-source.html  ADSR_8h_source.html  Asymp_8h-source.html  Asymp_8h_source.html  BandedWG_8h-source.html  BandedWG_8h_source.html  BeeThree_8h-source.html  BeeThree_8h_source.html  BiQuad_8h-source.html  BiQuad_8h_source.html  BlitSaw_8h-source.html  BlitSaw_8h_source.html  BlitSquare_8h-source.html  BlitSquare_8h_source.html  Blit_8h-source.html  Blit_8h_source.html  BlowBotl_8h-source.html  BlowBotl_8h_source.html  BlowHole_8h-source.html  BlowHole_8h_source.html  BowTabl_8h-source.html  BowTable_8h-source.html  BowTable_8h_source.html  Bowed_8h-source.html  Bowed_8h_source.html  Brass_8h-source.html  Brass_8h_source.html  Chorus_8h-source.html  Chorus_8h_source.html  Clarinet_8h-source.html  Clarinet_8h_source.html  Cubic_8h_source.html  DelayA_8h-source.html  DelayA_8h_source.html  DelayL_8h-source.html  DelayL_8h_source.html  Delay_8h-source.html  Delay_8h_source.html  Drummer_8h-source.html  Drummer_8h_source.html  (+1059 more)
effects/: Chorus.cpp  Chorus.h  Echo.h  Makefile  PitShift.cpp  PitShift.h  README-effects.txt  effects.cpp  effects.dsp  effects.dsw  effects.opt  effects.plg  threads.h
effects/tcl/: Effects.tcl
iOS/: README-iOS.md
iOS/STK.xcodeproj/: project.pbxproj
iOS/demo/: README.md
include/: ADSR.h  AifWvIn.h  AifWvOut.h  Asymp.h  BandedWG.h  BeeThree.h  BiQuad.h  Blit.h  BlitSaw.h  BlitSquare.h  BlowBotl.h  BlowHole.h  BowTabl.h  BowTable.h  Bowed.h  BowedBar.h  Brass.h  ByteSwap.h  Chorus.h  Clarinet.h  Controller.h  DLineL.h  DLineN.h  Delay.h  DelayA.h  DelayL.h  Drummer.h  Echo.h  Effect.h  Envelope.h  FIR.h  FM.h  FM4Alg3.h  FMVoices.h  FileLoop.h  FileRead.h  FileWrite.h  FileWvIn.h  FileWvOut.h  Filter.h  (+109 more)
mus151/: GUITwoOsc  MUS151.cpp  MUS151.dsp  MUS151.dsw  MUS151.ncb  MUS151.opt  Makefile  README-mus151.txt  TwoOsc.cpp  TwoOsc.h  threads.cpp
mus151/tcl/: TwoWaves.tcl
projects/demo/: Banded  CMakeLists.txt  Drums  Drums.bat  Makefile  Makefile.in  Md2Skini.cpp  Md2Skini.dsp  Md2Skini.vcproj  Modal.bat  Physical  Physical.bat  Shakers  Shakers.bat  StkDemo  StkDemo.bat  Voice  Voice.bat  demo.cpp  demo.dsp  demo.dsw  demo.sln  demo.vcproj  demo.vcxproj  demo.vcxproj.filters  utilities.cpp  utilities.h
projects/effects/: CMakeLists.txt  Chorus.cpp  Chorus.h  Echo.cpp  Echo.h  Makefile  Makefile.in  Makefile.sgi  PitShift.h  README-effects.txt  effects.cpp  effects.dsp  effects.dsw  effects.sln  effects.vcproj  effects.vcxproj
projects/eguitar/: CMakeLists.txt  ElectricGuitar  Makefile.in  eguitar.cpp  eguitar.dsp  eguitar.dsw  eguitar.sln  eguitar.vcxproj
projects/examples/: CMakeLists.txt  Makefile  Makefile.in  Moogy.cpp  Moogy.dsp  audioprobe.cpp  audioprobe.dsp  audioprobe.vcxproj  audioprobe.vcxproj.filters  bethree.cpp  bethree.dsp  bethree.vcproj  bethree.vcxproj  bethree.vcxproj.filters  controlbee.cpp  controlbee.dsp  controlbee.vcproj  controlbee.vcxproj  controlbee.vcxproj.filters  crtblit.cpp  crtsine.cpp  crtsine.dsp  crtsine.vcproj  crtsine.vcxproj  duplex.cpp  (+89 more)
ragamatic/: GUIRaga  Makefile  Sitar1.h  StrDrone.h  Tabla.cpp  Tabla.h  VoicDrum.cpp  VoicDrum.h  miditabl.h  ragamat.cpp  ragamat.dsp  ragamat.plg  ragamatic.dsw  threads.h
rawwaves/: MIDITABL.H  makewavs.c  silence.aiff
save/: Blotar.cpp  Blotar.h  Ublotar.cpp  Ublotar.h
scores/: Instructions  drumfunk.ski  funicula.ski  instructions  morazbel.ski  organs.ski  spain0.ski  tstloops.sco
src/: ADSR.cpp  AifWvIn.cpp  AifWvOut.cpp  Asymp.cpp  BandedWG.cpp  BeeThree.cpp  BiQuad.cpp  Blit.cpp  BlitSaw.cpp  BlitSquare.cpp  BlowBotl.cpp  BlowHole.cpp  BowTabl.cpp  BowTable.cpp  Bowed.cpp  BowedBar.cpp  Brass.cpp  ByteSwap.cpp  Chorus.cpp  Clarinet.cpp  Controller.cpp  DLineL.cpp  DLineN.cpp  Delay.cpp  DelayA.cpp  DelayL.cpp  DrumSynt.cpp  Drummer.cpp  Echo.cpp  Effect.cpp  Envelope.cpp  FIR.cpp  FM.cpp  FM4Alg4.cpp  FM4Alg5.cpp  FM4Op.cpp  FMVoices.cpp  FileLoop.cpp  FileRead.cpp  FileWrite.cpp  (+108 more)
syntmono/: GUIBowedBar  GUIDrums  GUIPhysical  GUIPlukStruk  GUIShakers  GUIVoice  MIDIPhysical  MIDIPlukStruk  MIDIVoice  Makefile  Makefile.sgi  STK.dsw  STK.opt  STKdemo  md2skini.dsp  md2skini.plg  syntmono.cpp  syntmono.dsp  syntmono.plg  threads.cpp  utilities.cpp  utilities.h
(+132 files in other folders)
